# GZC-Intel-Application-AC

./: .cursorrules  .dockerignore  .dockerignore.bak  .gitignore  BLOOMBERG_VOLATILITY_FIXED.md  CHANGELOG.md  CLAUDE.md  COMPLETE_AUTHENTICATION_FLOW_RESEARCH.md  COMPREHENSIVE_APPLICATION_AUDIT_2025-08-14.md  CRITICAL_CODE_FIXES.md  CURRENT_STATE_ANALYSIS.md  CURSOR_MCP_SETUP.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile-with-gateway  Dockerfile.fix  Dockerfile.frontend  Dockerfile.prebuild  Dockerfile.simple  FIXES_DEPLOYED.md  IMPLEMENTATION_CHECKLIST.md  INCIDENT_REPORT_2025-08-17.md  MCP_SETUP_GUIDE.md  MOBILE_RESPONSIVENESS_GUIDE.md  MSAL_INITIALIZATION_RESEARCH.md  POSTGRES_MCP_FIXED.md  PRODUCTION_FIXES_COMPLETE.md  PROJECT_STATUS.md  README-DEPLOYMENT.md  README.md  SCROLLBAR_IMPLEMENTATION_SUMMARY.md  SECURITY_UPGRADE.md  TAB_LOADING_ANALYSIS_REPORT.md  TAB_LOADING_SOLUTION.md  TEST_RESULTS.md  TYPESCRIPT_ISSUES_ANALYSIS.md  UBS_MARGIN_DATA_TABLE_README.md  VOLATILITY_COMPONENT_STATUS.md  VOLATILITY_DOM_FIX.md  (+113 more)
Main_Gateway/backend/: .env  DEVICE_CONFIG_API.md  Dockerfile  create_user_memory_table.sql  hypercorn.toml  log.cfg  pyproject.toml  requirements.txt
Main_Gateway/backend/app/: main.py
Main_Gateway/backend/app/auth/: azure_auth.py
Main_Gateway/backend/app/controllers/: __init__.py  cash_controller.py  cosmos_config_controller.py  db_controller.py  fix_controller.py  funds_controller.py  portfolio_controller.py  preferences_controller.py  proxy_controller.py  table_config_controller.py  transactions_controller.py  (+1 more)
(+516 files in other folders)
